refactor: rename pty-agent to ptyx across the codebase and update adapter commands
- Removed llm, openinterpreter, perplexity, tabby adapters.
- Updated mistral adapter to support new command structure.
- Adjusted examples and documentation to reflect new command usage.
- Added LM Studio adapter for model management and server control.
- Implemented tests for AI adapters to ensure functionality.
- Refactored CLI and middleware for consistency with new naming.

--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "pty-agent",
+  "name": "ptyx",
   "version": "1.0.0",
   "description": "Universal transparent PTY wrapper - Launch and control any CLI invisibly",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "bin": {
-    "pty-agent": "./dist/cli.js",
-    "pty-wrap": "./dist/cli.js"
+    "ptyx": "./dist/cli.js"
   },
   "exports": {
     ".": {
@@ -192,12 +191,12 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/JacquesGariepy/pty-agent.git"
+    "url": "git+https://github.com/JacquesGariepy/ptyx.git"
   },
   "bugs": {
-    "url": "https://github.com/JacquesGariepy/pty-agent/issues"
+    "url": "https://github.com/JacquesGariepy/ptyx/issues"
   },
-  "homepage": "https://github.com/JacquesGariepy/pty-agent#readme",
+  "homepage": "https://github.com/JacquesGariepy/ptyx#readme",
   "engines": {
     "node": ">=18"
   },
